docs: rewrite README to Chinese; update .env.example with all variables; add start.sh script